      router descriptors listed in the consensus.
    - Authorities now list servers who have the same nickname as a different
      named server, but list them with a new flag, "Unnamed". (122)
    - If the consensus list a router as "Unnamed", the name is assigned
      to a different router: do not identify the router by that name.
      (Partially implements proposal 122.)

  o Major bugfixes:
    - Stop publishing a new server descriptor just because we HUP or
      when we find our DirPort to be reachable but won't actually publish
      it. Extra descriptors without any real changes are dropped by the
      authorities, and can screw up our "publish every 18 hours" schedule.
    - When a router wasn't listed in a new networkstatus, we were leaving
      the flags for that router alone -- meaning it remained Named,
      Running, etc -- even though absence from the networkstatus means
      that it shouldn't be considered to exist at all anymore. Now we
      clear all the flags for routers that fall out of the networkstatus
      consensus. Fixes bug 529.

  o Minor features (v3 directory protocol):
    - Allow tor-gencert to generate a new certificate without replacing the
      signing key.
    - Allow certificates to include an address.

  o Minor features (router descriptor cache):
    - If we find a cached-routers file that's been sitting around for more
      than 28 days unmodified, then most likely it's a leftover from when we
      upgraded to 0.2.0.8-alpha.  Remove it.  It has no good routers anyway.
    - When we (as a cache) download a descriptor because it was listed in a
      consensus, remember when the consensus was supposed to expire, and
      don't expire the descriptor until then.

  o Minor features (performance):
    - Call routerlist_remove_old_routers() much less often.  This should
      speed startup, especially on directory caches.
    - Don't try to launch descriptor downloads quite so often when we