@@ -1083,7 +1083,7 @@ $Id$
 
    Before generating a consensus, an authority must decide which consensus
    method to use.  To do this, it looks for the highest version number
-   supported by more than 2/3 of the authorities.  If it supports this
+   supported by more than 2/3 of the authorities voting.  If it supports this
    method, then it uses it.  Otherwise, it falls back to method 1.
 
 3.5. Detached signatures
